--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,35 @@ p {
     line-height: 1.4;
 }
 
+.nav ul{
+    display:flex;
+    justify-content: space-around;
+    align-items: baseline;
+    margin:50px;
+}
+
+.nav a{
+    text-decoration: none;
+    color: black;
+    /* width:2px; */
+    display:block;
+    padding:15px;
+    align-items: center;
+  
+}
+.nav li{
+    display:inline-block;
+}
+
+#image-container{background-image:url("\img\jumbo.jpg.")
+    background-position:center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height:50px;
+    width:50%;
+    padding:80px;}
+
 .container {
     width: 800px;
     margin: 0 auto;
