--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5 {
     font-family: 'Rubik', sans-serif;
 }
 
+
 p {
     line-height: 1.4;
 }
@@ -78,7 +79,7 @@ p {
     color: black;
     /* width:2px; */
     display:block;
-    padding:15px;
+    /* padding:5px; */
     align-items: center;
   
 }
@@ -86,14 +87,16 @@ p {
     display:inline-block;
 }
 
-#image-container{background-image:url("\img\jumbo.jpg.")
-    background-position:center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height:50px;
-    width:50%;
-    padding:80px;}
+.image-container {
+    background-image:url("../img/jumbo.jpg");
+    background-repeat: no-repeat;
+    /* margin-left:50%;
+    margin-right:50%; */
+    width:auto;
+    padding:80px;
+    margin-left:18%;
+    margin-bottom:10px;
+}
 
 .container {
     width: 800px;
@@ -130,10 +133,31 @@ p {
     justify-content: space-evenly;
 }
 
+.middle-content .boxes .box:nth-child(1){
+    background-color:teal;}
+.middle-content .boxes .box:nth-child(2){
+        background-color:gold;}
+.middle-content .boxes .box:nth-child(3){
+            background-color:cadetblue;}
+.middle-content .boxes .box:nth-child(4){
+             background-color:coral;}
+.middle-content .boxes .box:nth-child(5){
+                    background-color:crimson;}
+.middle-content .boxes .box:nth-child(6){
+                        background-color:forestgreen;}
+.middle-content .boxes .box:nth-child(7){
+                            background-color:darkorchid;}
+.middle-content .boxes .box:nth-child(8){
+                                background-color:hotpink;}
+.middle-content .boxes .box:nth-child(9){
+                                    background-color:indigo;}
+.middle-content .boxes .box:nth-child(10){
+                                        background-color:dodgerblue;}
+
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
+    /* background: black; */
     margin: 20px 2.5%;
     color: white;
     display: flex;
